--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.7",
+        "spatie/data-transfer-object": "^3.7",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
