--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
         "react-dom": "^17.0.2",
         "react-refresh": "^0.13.0",
         "tailwindcss": "^3.0.18"
+    },
+    "dependencies": {
+        "date-fns": "^2.28.0"
     }
 }
