--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "tailwindcss": "^3.0.18"
     },
     "dependencies": {
-        "date-fns": "^2.28.0"
+        "date-fns": "^2.28.0",
+        "lucide-react": "^0.44.0",
+        "react-infinite-scroll-component": "^6.1.0"
     }
 }
