--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "date-fns": "^2.28.0",
         "lucide-react": "^0.44.0",
         "react-infinite-scroll-component": "^6.1.0",
-        "react-popper": "^2.3.0"
+        "react-modal": "^3.15.1",
+        "react-popper": "^2.3.0",
+        "react-tooltip": "^4.2.21"
     }
 }
