chore: publish assert

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=90c80dc4414357d1fda271f1948468e4",
+    "/css/app.css": "/css/app.css?id=b55d9cef2e7e14c85c15505743326b27"
 }
